@@ -16,6 +16,9 @@ PhotoPrint-0.4.0
 
   * Fixed a possible segfault if source and destination profiles are the same
 
+  * Fixed a segfault if the user attemps to open the Image -> Set Colour Profile...
+	dialog with no images selected.
+
 
 PhotoPrint-0.3.9
 
